# company-news-graph

./: .gitignore  README.en.md  README.md  start_dev.sh
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/schemas/: graph.py  task.py
backend/app/services/: mock_data.py  news_research.py  rate_limiter.py  storage.py
backend/data/tasks/: task_050.json  task_053.json  task_058.json
docs/: data-reuse-cache-design.md  design.md  investment-entity-relation-schema.md  investment-intelligence-roadmap.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/components/: GraphView.tsx  InvestmentPanels.tsx  SummaryPanel.tsx
frontend/src/lib/: api.ts  i18n.ts  mockGraph.ts
frontend/src/pages/: App.tsx
